--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
-body{
+*{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-
+    /* font-size: 18px; */
 }
-
+h1{
+    font-size: 35px;
+}
 /*
 ------------banner---- start---------
 */
-
-.hero-image{
+/* 
+.banner{
     background-image: linear-gradient(
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.7)),
@@ -17,24 +20,58 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 80%;
-    display: flex;
-}
+    height: 100vh;
+    width: 100%;
+} */
 
-.hero-text {
+.banner {
+    width: 100%;
+    height: 100vh;
+    background-image: url(images/donation13.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: white;
     text-align: center;
-    color: #fff;
-}
-.hero-text h1{
-    font-size: 50px;
-    line-height: 20px;
 }
 
-.hero-text p{
-    color: orange;
-    padding: 15px;
+.container{
+    width: 90%;
+    height: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+.container .banner-text h1{
+    font-size: 54px;
+    margin-bottom: 18px;
+}
+
+.container .banner-text p{
+    font-size: 20px;
+    max-width: 90%;
+    margin: 0 auto;
+    margin-bottom: 50px;
+}
+
+.container .banner-text a{
+    text-decoration: none;
+    display: inline-block;
+    background-color: #FF5959;
+    border-radius: 5px;
+    font-size: 30px;
+    padding: 10px 30px;
+    color: white;
+}
+
+.container .banner-text a:hover{
+    background-color: #fff;
+    color: #FF5959;
+}
 .link-button{
     text-decoration: none;
     background-color: #FF5959;
@@ -58,6 +95,8 @@ body{
 }
 .donate-today p{
     color: #ABABAB;
+    max-width: 90%;
+    margin: 20px auto;
 }
 .flexible-container{
     display: flex;
@@ -96,8 +135,9 @@ input{
 
 .donate-plan p{
     color: #ABABAB;
-    margin: 50px 20%;
-
+    max-width: 90%;
+    margin: 20px auto;
+    
 }
 
 .one-third-width{
@@ -131,14 +171,16 @@ input{
 }
 .feed p{
     color: #ABABAB;
+    max-width: 90%;
+    margin: 20px auto;
 }
 
-.divide-feed{
+.half-feed{
     width: 50%;
     padding-left: 2%;
 }
 
-.divide-feed img{
+.half-feed img{
     height: 100%;
     width: 100%;
 }
@@ -154,7 +196,9 @@ input{
 }
 .get-my-updates p{
     color: #ABABAB;
-    margin: 20px 110px;
+    max-width: 350px;
+    margin: 20px auto;
+
 }
 
 .form-area{
