--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-*{
+body{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    /* font-size: 18px; */
+    font-size: 18px;
 }
 h1{
     font-size: 35px;
@@ -42,10 +42,10 @@ h1{
     margin: 0 auto;
 
     display: flex;
-    align-items: center;
-    justify-content: center;
 }
-
+.banner-text{
+    margin-top: 200px;
+}
 .container .banner-text h1{
     font-size: 54px;
     margin-bottom: 18px;
@@ -186,6 +186,43 @@ input{
 }
 
 /*
+-------------my-section---------------start
+*/
+
+.my-section{
+    width: 100%;
+    height: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #FAFAFA;
+}
+
+.my-section .non-profit h1, h3{
+    margin-bottom: 18px;
+}
+
+.my-section .non-profit h3{
+    color: #CACACA;
+    font-weight: lighter;
+}
+
+.my-section .non-profit p{
+    font-size: 20px;
+    max-width: 90%;
+    margin: 0 auto;
+    margin-bottom: 50px;
+}
+
+.non-profit-img{
+    width: 33%;
+    padding: 2%;
+}
+
+.non-profit-img img{
+    width: 80%;
+}
+/*
 --------------get-my-update-----------start----
 */
 
@@ -265,4 +302,9 @@ footer h2{
 
 footer small{
     color: #75777F;
+}
+
+footer p{
+    margin-top: 25px;
+    color: #fff;
 }
