--- a/style.css
+++ b/style.css
@@ -91,21 +91,23 @@ h1{
 
 .donate-today {
     text-align: center;
-    margin: 50px 30%;
+    margin: 20px 20px;
 }
 .donate-today p{
     color: #ABABAB;
-    max-width: 90%;
-    margin: 20px auto;
 }
 .flexible-container{
     display: flex;
 }
 
 .divide-width{
+    width: 100px;
     margin-left: 6%;
     background-color: #FAFAFA;
     color: #707070;
+    padding: 10px;
+    padding-bottom: 20px;
+    border-radius: 5px;
 }
 
 .checked{
@@ -200,6 +202,7 @@ input{
 
 .my-section .non-profit h1, h3{
     margin-bottom: 18px;
+    padding-top: 18px;
 }
 
 .my-section .non-profit h3{
